# RecallRadar

./: .gitignore  README.md  pyproject.toml  recall_radar_synth.db
data/: pantry_sample.csv  pantry_synthetic.csv  recalls_sample.csv  recalls_synthetic.csv
src/recall_radar/: __init__.py  agents.py  cli.py  db.py  ingest.py  matching.py  pipeline.py  reporting.py  synth.py  web.py
tests/: test_matching.py
