[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recall-radar"
version = "0.1.0"
description = "Agentic AI pipeline for pantry-level food recall risk detection"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
recall-radar = "recall_radar.cli:main"
recall-radar-ui = "recall_radar.web:main"
